--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-
     "mongoose": "^8.19.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.22"
   }
 }
